# aemp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aemp_bridge.py  aemp_cli.py  pyproject.toml
.github/workflows/: ci.yml
aemp/: __init__.py  compat.py  publisher.py  schema.py  store.py  subscriber.py
examples/: demo.py
tests/: test_aemp.py
